# crawler

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run_server.sh
app/: __init__.py  config.py
app/controllers/coleta/: __init__.py
app/crawlers/: crawler_base.py  crawler_extra_clube.py
app/repositories/: consulta.py
app/repositories/erros/: erros_personalizados.py
