[tool.poetry]
name = "app"
version = "0.1.0"
description = "Crawler"
authors = ["hiagocelestino <hiago.celestino@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.3"
playwright = "^1.31.1"
flask-sqlalchemy = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
